Trying to fix look on mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    width: fit-content;
 }
 
 .hero, .footer {
@@ -15,7 +15,7 @@ body {
 
 .hero {
     color: white;
-    padding: 0px 200px;
+    padding: 20px;
     flex-direction: column;
     gap: 48px;
 }
